[package]
name = "asteroid"
version = "0.3.0"
authors = ["Zack <zphixon@gmail.com>"]
description = "Small 3d game framework"
homepage = "https://github.com/zphixon/asteroid"
repository = "https://github.com/zphixon/asteroid"
keywords = ["game", "engine", "2d", "graphics"]
categories = ["game-engines"]
license = "MIT"
readme = "README.md"

[dependencies]
time = "0.2"
winit = "0.19.5"
vulkano = "0.16"
vulkano-win = "0.16"
vulkano-shaders = "0.16"

