[package]
name = "asteroid"
version = "0.3.0"
authors = ["Zack <zphixon@gmail.com>"]
description = "Small 3d game framework"
homepage = "https://github.com/zphixon/asteroid"
repository = "https://github.com/zphixon/asteroid"
keywords = ["game", "engine", "2d", "graphics"]
categories = ["game-engines"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
time = "0.2"
winit = "0.21"
vulkano = "0.17"
vulkano-win = "0.17"
vulkano-shaders = "0.16"
