[package]
name = "asteroid"
version = "0.3.0"
authors = ["Zack <zphixon@gmail.com>"]
description = "Small 3d game framework"
homepage = "https://github.com/zphixon/asteroid"
repository = "https://github.com/zphixon/asteroid"
keywords = ["game", "engine", "2d", "graphics"]
categories = ["game-engines"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
nalgebra = "0.19"
image = "0.22.4"
tobj = "0.1.12"
time = "0.2"
winit = "0.21"
#vulkano = { path = "../vulkano/vulkano" }
#vulkano-win = { path = "../vulkano/vulkano-win" }
#vulkano-shaders = { path = "../vulkano/vulkano-shaders" }
vulkano = "0.17"
vulkano-win = "0.17"
vulkano-shaders = "0.16"
log = "0.4"

[dev-dependencies]
env_logger = "0.7.1"

[[example]]
name = "main"
